# cvpysdk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMIT_GUIDELINES.md  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: conventional-commits.yml  lint.yml  test.yml
cvpysdk/: __init__.py  activate.py  activitycontrol.py  additional_settings.py  agent.py  alert.py  array_management.py  backup_network_pairs.py  backupset.py  certificates.py  client.py  clientgroup.py  commcell.py  commcell_migration.py  constants.py  content_analyzer.py  credential_manager.py  cvpysdk.py  deduplication_engines.py  dev_test_group.py  disasterrecovery.py  domains.py  download_center.py  eventviewer.py  exception.py  globalfilter.py  hac_clusters.py  identity_management.py  index_pools.py  index_server.py  instance.py  internetoptions.py  job.py  key_management_server.py  license.py  metallic.py  metricsreport.py  monitoring.py  name_change.py  network.py  (+20 more)
cvpysdk/activateapps/: __init__.py  compliance_utils.py  constants.py  ediscovery_utils.py  entity_manager.py  file_storage_optimization.py  inventory_manager.py  request_manager.py  sensitive_data_governance.py  tco.py
cvpysdk/agents/: __init__.py  exchange_database_agent.py
cvpysdk/backupsets/: __init__.py  aadbackupset.py  adbackupset.py  cabackupset.py  db2backupset.py  fsbackupset.py  hanabackupset.py  nasbackupset.py  postgresbackupset.py  sharepointbackupset.py  vsbackupset.py
cvpysdk/cleanroom/: __init__.py  cs_recovery.py  recovery_entities.py  recovery_groups.py  recoveryjob.py  runbook.py  target.py
cvpysdk/clients/: __init__.py  onedrive_client.py  vmclient.py
cvpysdk/clouddiscovery/: __init__.py  cloud_discovery.py  connections.py  constants.py  resources.py
cvpysdk/dashboard/: ad_dashboard.py
cvpysdk/datacube/: __init__.py  constants.py  datacube.py  datasource.py  handler.py  sedstype.py
cvpysdk/deployment/: __init__.py  cache_config.py  deploymentconstants.py  download.py  install.py  uninstall.py
cvpysdk/drorchestration/: __init__.py  blr_pairs.py  dr_orchestration_job_phase.py  drjob.py  drorchestrationoperations.py  failovergroups.py  replication_groups.py  replication_pairs.py  replicationmonitor.py
cvpysdk/instances/: __init__.py  aadinstance.py  bigdataappsinstance.py  cainstance.py  db2instance.py  dbinstance.py  hanainstance.py  informixinstance.py  lndbinstance.py  mysqlinstance.py  oracleinstance.py  postgresinstance.py  saporacleinstance.py  sharepointinstance.py  splunkinstance.py  sqlinstance.py  sybaseinstance.py  vminstance.py  vsinstance.py
cvpysdk/monitoringapps/: __init__.py  constants.py  threat_indicators.py
cvpysdk/policies/: __init__.py  configuration_policies.py  schedule_options.py  schedule_policies.py  storage_policies.py
cvpysdk/reports/: __init__.py  report.py
cvpysdk/security/: __init__.py  role.py  security_association.py  two_factor_authentication.py  user.py  usergroup.py
cvpysdk/securitycenter/: constants.py  resource_groups.py  resources.py
cvpysdk/subclients/: __init__.py  aadsubclient.py  adsubclient.py  bigdataappssubclient.py  casesubclient.py  casubclient.py  db2subclient.py  dbsubclient.py  exchsubclient.py  fssubclient.py  hanasubclient.py  index_server_subclient.py  informixsubclient.py  lndbsubclient.py  mysqlsubclient.py  nassubclient.py  o365apps_subclient.py  oraclesubclient.py  postgressubclient.py  saporaclesubclient.py  sharepointsubclient.py  splunksubclient.py  sqlsubclient.py  sybasesubclient.py  vminstancesubclient.py  vssubclient.py
docs/: coverage-plan.md
tests/: conftest.py  test_all.py  test_client.py  test_domain.py  testlib.py
tests/integration/: test_client.py  test_domain.py  testlib.py
tests/unit/: test_activate.py  test_activitycontrol.py  test_agent.py  test_alert.py  test_array_management.py  test_client.py  (+54 more)
(+315 files in other folders)
