[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cvpysdk"
description = "Commvault SDK for Python"
authors = [{name = "Commvault Systems Inc.", email = "Dev-PythonSDK@commvault.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]
dependencies = [
  "requests",
  "xmltodict",
  "pycryptodomex"
]
requires-python = ">=3.6"
keywords = ["commvault", "python", "sdk", "cv", "simpana", "commcell", "cvlt", "webconsole"]

[project.optional-dependencies]
dev = ["ruff>=0.9", "pre-commit>=3.0"]

[project.urls]
"Home" = "https://github.com/Commvault/cvpysdk"
"Bug Tracker" = "https://github.com/Commvault/cvpysdk/issues"
"Documentation" = "https://commvault.github.io/cvpysdk/"
"Source" = "https://github.com/Commvault/cvpysdk"

[tool.ruff]
line-length = 99
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]