[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cvpysdk"
description = "Commvault SDK for Python"
authors = [{name = "Commvault Systems Inc.", email = "Dev-PythonSDK@commvault.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]
dependencies = [
  "requests",
  "xmltodict",
  "pycryptodomex"
]
requires-python = ">=3.6"
keywords = ["commvault", "python", "sdk", "cv", "simpana", "commcell", "cvlt", "webconsole"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9; python_version>='3.7'",
    "pre-commit>=3.0; python_version>='3.8'",
    "pytest>=7.0; python_version>='3.7'",
    "pytest>=4.6,<7; python_version<'3.7'",
    "pytest-cov>=4.0; python_version>='3.7'",
    "pytest-cov>=2.0,<4; python_version<'3.7'",
]

[project.urls]
"Home" = "https://github.com/Commvault/cvpysdk"
"Bug Tracker" = "https://github.com/Commvault/cvpysdk/issues"
"Documentation" = "https://commvault.github.io/cvpysdk/"
"Source" = "https://github.com/Commvault/cvpysdk"

[tool.ruff]
line-length = 99
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E101",   # mixed-spaces-and-tabs (legacy indentation)
  "E501",   # line-too-long (legacy code)
  "E711",   # comparison-to-none (pervasive == None patterns)
  "E712",   # comparison-to-bool (pervasive == True/False patterns)
  "E721",   # type-comparison (pervasive type() == patterns)
  "E722",   # bare-except
  "E731",   # lambda-assignment
  "B006",   # mutable-argument-default
  "B007",   # unused-loop-control-variable
  "B008",   # function-call-in-default-argument
  "B018",   # useless-expression
  "B023",   # function-uses-loop-variable
  "B024",   # abstract-base-class-without-abstract-method
  "B035",   # static-key-dict-comprehension
  "B904",   # raise-without-from-inside-except
  "F401",   # unused-import
  "F402",   # import-shadowed-by-loop-var
  "F403",   # undefined-local-with-import-star
  "F405",   # undefined-local-with-import-star-usage
  "F601",   # multi-value-repeated-key-literal
  "F811",   # redefined-unused-name
  "F821",   # undefined-name
  "F841",   # unused-variable
  "UP030",  # format-literals (unsafe fix only)
  "UP031",  # printf-string-formatting (unsafe fix only)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live CommCell connection",
    "unit: pure unit tests, no network required",
]

[tool.coverage.run]
source = ["cvpysdk"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
